web/_includes/style.css
/* ... */
.s-visually-hidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.skip-link {
  position: absolute;
  top: 1rem;
  left: 1rem;
  z-index: 99;
}

.skip-link:not(:focus), .visually-hidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: auto;
  margin: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
}

html,
body {
  height: 100%;
}
body {
  display:flex;
  flex-direction: column;
  padding: 0;
  margin: 0;
  font-family: var(--body-font);
  font-weight: var(--body-light);
  font-size: 100%;
  font-size: calc(100% + (20 - 16) * ( (100vw - 300px) / (1400 - 300)));
  line-height: 1.5;
  line-height: calc((1.3 * 1em) + (1.5 - 1.3) * ( (100vw - 300px) / (1400 - 300)));
  color: var(--general-night-4);
}

h1,
h2,
h3 {
  font-family: 'Manuale', georgia;
  font-weight: var(--body-extra-bold);
  line-height: 1.1;
}

h1 {
  font-size: calc(1.5rem + 1.2vw);
}

h2 {
  font-size: calc(1.2rem + 1.2vw);
  font-weight: var(--body-bold);
}

h3 {
  /* font-size: calc(1.1rem + 1.2vw); */
  font-weight: var(--body-semi-bold);
}

a {
  color: var(--rho-cancer-3);
}
/* a,
a:visited {
  color: var(--general-night-4);
} */

figure {
  margin: 0;
}

figcaption {
  font-style: italic;
  font-size: calc(0.86rem + 0.25vw);
  margin-top: 0.6rem;
}

/* do some general stuff */

.clearfix:after {
  content: " ";
  display: block;
  clear: both;
}

.clearfix {
  display: block;
  display: flow-root;
}

img {
  border-style: none;
  /* vertical-align: bottom; */
  display: block;
  width: 100%;
  max-width: 100%;
  height: auto;
}

.caption,
em {
  font-style: italic;
}

.mt0 { margin-top: 0 !important;}
.mb0 { margin-bottom: 0 !important;}

p {
  margin: 1.3em 0;
  line-height: 1.5;
}
p:first-of-type {
  margin-top: .8em;
}

li {
  margin: .4em 0;
}

article h1 {
  /* font-size: calc(36px + .25vw); */
  margin-top: 0;
  margin-bottom: 0;
  line-height: 1.2;
}

article {
  padding-bottom: 5rem;
}

blockquote {
  border-left: 6px solid var(--general-night-2);
  margin-left: 2rem;
}

blockquote p {
  font-style: italic;
  padding-left: 1em;
  color: var(--general-night-3);
}

/* Styles for users who prefer dark mode at the OS level */
@media (prefers-color-scheme: dark) {
  body {
    background-color: var(--general-night-5);
    color: var(--general-night-2);
  }
  img,
  svg,
  picture {
    filter: brightness(.7) contrast(1.2);
  }

  svg.social-icon {
    filter: brightness(1.4);
  }

  img:hover,
  svg:hover,
  picture:hover {
    filter: brightness(.9) contrast(1.1);
  }
  blockquote p {
    color: var(--general-night-2);
  }
}


/* ==========================================================================
   #CUSTOM LAYOUTS
   * 404 & Link in Bio pages
   ========================================================================== */

section.biolinks {
  background-color: var(--rho-aquarius-1);
  background: -webkit-linear-gradient(to bottom, var(--rho-aquarius-1), var(--rho-aquarius-2));
  background: linear-gradient(to bottom, var(--rho-aquarius-1), var(--rho-cancer-1));
  margin: 0;
  padding: 3rem 0 6rem;
}

section.biolinks figure {
  grid-column: 1 / 13;
  justify-self: center;
}

section.biolinks figure img,
section.biolinks figure figcaption {
  border-radius: 100%;
  max-width: 150px;
  text-align: center;
}

section.biolinks ol.social-icons {
  grid-column: 1 / 13;
  justify-self: center;
}

.large-card-wrapper {
  grid-column: 3 / 11;
}

.large-card-wrapper .card:hover {
  background-color: var(--alpha-light);
  background: -webkit-linear-gradient(to top, var(--beta-light), var(--gamma-light));
  background: linear-gradient(to top, var(--beta-light), var(--gamma-light));
}

@media all and (max-width: 800px) {
  .large-card-wrapper {
    grid-column: 2 / 12;
    padding: 1rem;
  }
}

@media all and (max-width: 650px) {
  .large-card-wrapper {
    grid-column: 1 / 13;
  }
}

.large-card-wrapper .card {
 padding: 1rem 1.8rem;
 margin-bottom: .6rem;
}

.large-card-wrapper ol {
  padding-left: 0;
}

.large-card-wrapper ol li {
  list-style: none;
}

.large-card-wrapper ol li a,
.large-card-wrapper ol li a:visited {
  color: var(--general-night-4);
}

.medium-card-wrapper {
  grid-column: 2 / span 6; 
  grid-row: 2 / 3;
  Max-width: 60ch;
}

figure.large-figure {
  grid-column: 6 / 12;
  grid-row: 1 / 6;
}

@media all and (max-width: 800px) {
  .medium-card-wrapper {
    grid-column: 2 / 12;
  }
  figure.large-figure {
    grid-column: 1 / 13;
  }
}

/* Styles for users who prefer dark mode at the OS level */
@media (prefers-color-scheme: dark) {
  section.biolinks {
    background-color: var(--rho-aquarius-1);
  }
  .large-card-wrapper ol li a,
  .large-card-wrapper ol li a:visited {
    color: var(--general-night-2);
  }
}



/* ==========================================================================
   #CARD(s)
   ========================================================================== */

.card {
  border: 1px solid var(--general-night-2);
  padding: 2rem 2rem 3rem;
  border-radius: var(--small-br);
  /* background-color: var(--alpha-light); */
  /* background: -webkit-linear-gradient(to top, var(--alpha-light), var(--beta-light));
  background: linear-gradient(to top, var(--alpha-light), var(--beta-light)); */
  /* backdrop-filter: blur(8px); */
}

a:hover .card {
  border: 1px solid var(--general-night-3);
}

a:active .card {
  border: 1px solid var(--general-night-2);
}


.flex-row-data {
  display:flex;
  justify-content:space-between;
  font-family: var(--utility-font);
  color: var(--general-night-3);
}

.card-data-label {
  text-transform: uppercase;
}

/* Styles for users who prefer dark mode at the OS level */
@media (prefers-color-scheme: dark) {
  .card {
    border:1px solid var(--general-night-3ish);
  }

  ol.postlist a div.card li.postlist-item div.block p {
    color: var(--general-night-2);
  } 
}
/* ... */

